2017-10-27  Thomas Koenig  <tkoenig@gcc.gnu.org>

PR fortran/56342
	* simplify.c (is_constant_array_expr): If the expression is
	a parameter array, call gfc_simplify_expr.

2017-10-27  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/56342
	* gfortran.dg/matmul_const.f90: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@254157 138bc75d-0d04-0410-961f-82ee72b054a4